# schedule-assistant

./: .gitignore  README.md  config.py  convert_json_to_config_candidate.py  core-courses-lessons-spring-2026.json  generate_cases.py  main.py  metrics.py  pyproject.toml  rooms.json  timetable_viewer.html
docs/: REVERSE.md  START.md
tests/: conftest.py  test_solver.py  test_solver_negative.py
